--- a/QBImagePicker/es.lproj/QBImagePicker.strings
+++ b/QBImagePicker/es.lproj/QBImagePicker.strings
@@ -19,3 +19,6 @@
 
 "assets.toolbar.item-selected" = "%ld items seleccionados";
 "assets.toolbar.items-selected" = "%ld items seleccionados";
+
+"This video is too large" = "Este video es demasiado grande";
+"OK" = "DE ACUERDO";
