--- a/QBImagePicker/ja.lproj/QBImagePicker.strings
+++ b/QBImagePicker/ja.lproj/QBImagePicker.strings
@@ -19,3 +19,6 @@
 
 "assets.toolbar.item-selected" = "%ld 項目を選択中";
 "assets.toolbar.items-selected" = "%ld 項目を選択中";
+
+"This video is too large" = "この動画は大きすぎます";
+"OK" = "よし";
