--- a/QBImagePicker/en.lproj/QBImagePicker.strings
+++ b/QBImagePicker/en.lproj/QBImagePicker.strings
@@ -20,5 +20,5 @@
 "assets.toolbar.item-selected" = "%ld Item Selected";
 "assets.toolbar.items-selected" = "%ld Items Selected";
 
-"This video is too large" = "This video is too large";
+"Video limit is %ld seconds" = "Video limit is %ld seconds";
 "OK" = "OK";
